# struct2json

./: .gitattributes  .gitignore  build.sh
cJSON/: CMakeLists.txt  cjson.pc.in
demo/: CMakeLists.txt  build_prepare.sh  generate_s2j_code.py  generate_struct_defination.py
demo/inc/: my_struct_2_json.h  struct_defination.txt
demo/src/: error_print.txt  main.c  my_struct_2_json.c
struct2json/: CMakeLists.txt  struct2json.pc.in
